[package]
name =  "wlx_monitors"
version = "0.1.0"
edition = "2024"

[lib]
name = "wlx_monitors"
path = "src/lib.rs"

[[example]]
name = "monitor_info"
path = "examples/monitor_info.rs"

[dependencies]
wayland-client = "0.31.12"
wayland-protocols-wlr = {  version = "0.3.10", features = ["client"] }
wayland-protocols = { version = "0.32.10", features = ["client"] }
rustix = { version = "1", features = [ "event", "time" ] }
