[package]
name = "wlx_monitors"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Wayland output manager using wlr-output-management protocol"
license = "MIT"
repository = "https://github.com/x34-dzt/wlx_monitors"
keywords = ["wayland", "monitor", "display", "wlroots", "output"]
categories = ["api-bindings", "hardware-support"]
rust-version = "1.85.0"

[lib]
name = "wlx_monitors"
path = "src/lib.rs"

[[example]]
name = "monitor_info"
path = "examples/monitor_info.rs"

[dependencies]
wayland-client = "0.31.12"
wayland-protocols-wlr = {  version = "0.3.10", features = ["client"] }
wayland-protocols = { version = "0.32.10", features = ["client"] }
rustix = { version = "1", features = [ "event", "time" ] }
